# rcgen

./: .gitignore  .rustfmt.toml  .rustfmt.unstable.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: 0.12-to-0.13.md
examples/: auto-gen-ca-and-server-nativetls.rs  auto-gen-ca-and-server-tls.rs  plumber.rs  rsa-irc-openssl.rs  rsa-irc.rs
rcgen/: CHANGELOG.md  Cargo.toml  README.md
rcgen/docs/: 0.12-to-0.13.md
rcgen/examples/: certificate_policies.rs  files.rs  rsa-irc-openssl.rs  rsa-irc.rs  sign-leaf-with-ca.rs  sign-leaf-with-pem-files.rs  simple.rs
rcgen/src/: builders.rs  certificate.rs  crl.rs  csr.rs  error.rs  ext.rs  issuer.rs  key_pair.rs  lib.rs  oid.rs  ring_like.rs  sign_algo.rs  string.rs  string_types.rs
rcgen/tests/: botan.rs  generic.rs  openssl.rs  util.rs  webpki.rs
rustls-cert-gen/: Cargo.toml  LICENSE  README.md
rustls-cert-gen/src/: args.rs  cert.rs  lib.rs  main.rs
rustls-cert-gen/src/cert/: ca.rs  entity.rs  mod.rs  params.rs  signature.rs
src/: crl.rs  csr.rs  error.rs  key_pair.rs  lib.rs  main.rs  oid.rs  sign_algo.rs
tests/: botan.rs  generic.rs  openssl.rs  util.rs  webpki.rs
verify-tests/: Cargo.toml
verify-tests/src/: lib.rs
verify-tests/tests/: botan.rs  generic.rs  openssl.rs  webpki.rs
