[workspace]
members = ["rcgen", "rustls-cert-gen"]
resolver = "2"

[workspace.dependencies]
aws-lc-rs = { version = "1.6.0", default-features = false }
pem = "3.0.2"
pki-types = { package = "rustls-pki-types", version = "1.4.1" }
rand = "0.8"
ring = "0.17"
x509-parser = "0.17"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Rust X.509 certificate generator"
repository = "https://github.com/rustls/rcgen"
keywords = ["mkcert", "ca", "certificate"]
