[workspace]
members = ["verify-tests", "rcgen", "rustls-cert-gen"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71"
readme = "README.md"
description = "Rust X.509 certificate generator"
repository = "https://github.com/rustls/rcgen"
keywords = ["mkcert", "ca", "certificate"]

[workspace.dependencies]
anyhow = "1.0.75"
assert_fs = "1.0.13"
aws-lc-rs = { version = "1.13.3", default-features = false }
botan = { version = "0.12", features = ["vendored"] }
bpaf = { version = "0.9.5", features = ["derive"] }
openssl = "0.10"
pem = "3.0.2"
pki-types = { package = "rustls-pki-types", version = "1.4.1" }
ring = "0.17"
rustls-webpki = { version = "0.103", features = ["ring", "std"] }
time = { version = "0.3.6", default-features = false }
x509-parser = "0.18"
yasna = { version = "0.5.2", features = ["time", "std"] }
zeroize = { version = "1.2" }
