[package]
name = "rcgen"
version = "0.11.3"
documentation = "https://docs.rs/rcgen"
description = "rcgen (patched locally to bump ring dependency)"
repository = "https://github.com/est31/rcgen"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.72"
keywords = ["x509", "certificates", "rcgen"]

[features]
default = ["crypto", "pem", "ring"]
aws_lc_rs = ["crypto", "dep:aws-lc-rs", "aws-lc-rs/aws-lc-sys", "x509-parser?/verify-aws"]
aws_lc_rs_unstable = ["aws_lc_rs", "aws-lc-rs/unstable", "x509-parser?/verify-aws"]
fips = ["crypto", "dep:aws-lc-rs", "aws-lc-rs/fips"]
crypto = []
ring = ["crypto", "dep:ring", "x509-parser?/verify"]

[dependencies]
aws-lc-rs = { version = "1.15", optional = true }
pem = { version = "3.0.6", optional = true }
pki-types = { package = "rustls-pki-types", version = "1.13.2" }
ring = { version = "0.17", optional = true }
time = "0.3.44"
x509-parser = { version = "0.16.0", optional = true }
yasna = { version = "0.5.2", features = ["time"] }
zeroize = { version = "1.8.2", optional = true }


[[example]]
name = "rsa-irc-openssl"
required-features = ["pem"]

[[example]]
name = "sign-leaf-with-ca"
required-features = ["pem", "x509-parser"]

[[example]]
name = "sign-leaf-with-pem-files"
required-features = ["pem", "x509-parser"]

[[example]]
name = "simple"
required-features = ["crypto", "pem"]

[package.metadata.docs.rs]
features = ["aws_lc_rs",  "aws_lc_rs_unstable", "crypto", "ring", "x509-parser"]
rustdoc-args = ["--cfg", "rcgen_docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "time::offset_date_time::OffsetDateTime",
    "zeroize::Zeroize",
    "rustls_pki_types::*",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rcgen_docsrs)"] }
