[package]
name = "rcgen"
version = "0.14.3"
documentation = "https://docs.rs/rcgen"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true

[features]
default = ["crypto", "pem", "ring"]
crypto = []
aws_lc_rs = ["crypto", "dep:aws-lc-rs", "aws-lc-rs/aws-lc-sys"]
ring = ["crypto", "dep:ring"]
fips = ["crypto", "dep:aws-lc-rs", "aws-lc-rs/fips"]

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
yasna = { workspace = true }
ring = { workspace = true, optional = true }
pem = { workspace = true, optional = true }
pki-types = { workspace = true }
time = { workspace = true }
x509-parser = { workspace = true, features = ["verify"], optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
pki-types = { workspace = true }
x509-parser = { workspace = true, features = ["verify"] }
rustls-webpki = { workspace = true }
botan = { workspace = true }
ring = { workspace = true }

[target."cfg(unix)".dev-dependencies]
openssl = { workspace = true }

[[example]]
name = "rsa-irc-openssl"
required-features = ["pem"]

[[example]]
name = "sign-leaf-with-ca"
required-features = ["pem", "x509-parser"]

[[example]]
name = "simple"
required-features = ["crypto", "pem"]

[package.metadata.docs.rs]
features = ["x509-parser"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "time::offset_date_time::OffsetDateTime",
    "zeroize::Zeroize",
    "rustls_pki_types::*",
]
