[package]
name = "rcgen"
version = "0.14.5"
documentation = "https://docs.rs/rcgen"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true

[features]
default = ["crypto", "pem", "ring"]
aws_lc_rs = ["crypto", "dep:aws-lc-rs", "aws-lc-rs/aws-lc-sys", "x509-parser?/verify-aws"]
aws_lc_rs_unstable = ["aws_lc_rs", "aws-lc-rs/unstable", "x509-parser?/verify-aws"]
fips = ["crypto", "dep:aws-lc-rs", "aws-lc-rs/fips"]
crypto = []
ring = ["crypto", "dep:ring", "x509-parser?/verify"]

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
pem = { workspace = true, optional = true }
pki-types = { workspace = true }
ring = { workspace = true, optional = true }
time = { workspace = true }
x509-parser = { workspace = true, optional = true }
yasna = { workspace = true }
zeroize = { workspace = true, optional = true }

[target."cfg(unix)".dev-dependencies]
openssl = { workspace = true }

[[example]]
name = "rsa-irc-openssl"
required-features = ["pem"]

[[example]]
name = "sign-leaf-with-ca"
required-features = ["pem", "x509-parser"]

[[example]]
name = "sign-leaf-with-pem-files"
required-features = ["pem", "x509-parser"]

[[example]]
name = "simple"
required-features = ["crypto", "pem"]

[package.metadata.docs.rs]
features = ["aws_lc_rs",  "aws_lc_rs_unstable", "crypto", "ring", "x509-parser"]
rustdoc-args = ["--cfg", "rcgen_docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "time::offset_date_time::OffsetDateTime",
    "zeroize::Zeroize",
    "rustls_pki_types::*",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rcgen_docsrs)"] }
